--- a/src/components/TableBody/Body.css
+++ b/src/components/TableBody/Body.css
@@ -1,5 +1,8 @@
 .name-cell {
   text-transform: capitalize;
+  font-size: x-large;
+  font-weight: bolder;
+  text-align: center;
   background-color: #00adb5;
 }
 .empImage {
